fixed positioning of hero page message and orientation problems on mobile devices

--- a/css/about.css
+++ b/css/about.css
@@ -6,7 +6,7 @@
 }
 
 .eventpic {
-    padding-bottom:20px;
+    padding-bottom:30px;
 }
 
 .mailto {
